# BrainX

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini.example  config.example.yaml  pyproject.toml  requirements.txt  seed.py  server.py  server.spec  task.spec
backend/.run/: Celery.run.xml  app-downgrade-all.run.xml  app-init.run.xml  app-migrate.run.xml  app-re-init-db.run.xml  celery -Q rag_queue.run.xml  celery.run.xml  main.run.xml  make-run-dev.run.xml  make-run-ev.run.xml  pytest in ._tests_test_unit_core_agent_bot.run.xml  pytest in ._tests_test_unit_core_ai_model.run.xml  pytest in ._tests_test_unit_core_rag_indexing.run.xml  pytest in ._tests_test_unit_core_workflow.run.xml  pytest in ._tests_test_unit_dao.run.xml  pytest in ._tests_test_unit_service_rag.run.xml  pytest in _.run.xml  seed.run.xml  server.run.xml  test.run.xml  uvicorn app.main_app.run.xml
backend/alembic/: env.py
backend/alembic/versions/: 000000000001_add_user_model.py  000000000002_add_tenant_model.py  000000000003_add_pivot_tenant_to_user_model.py  000000000004_add_default_tenant_models_model.py  000000000010_add_workflow_model.py  000000000012_add_model_providers_model.py  000000000013_add_app_table.py  000000000014_add_app_model_config_model.py  000000000015_add_conversation_model.py  000000000016_add_message_model.py  000000000020_add_mediaresource_model.py  000000000030_add_dataset_model.py  000000000031_add_document_model.py  000000000032_add_documentsegment_model.py  10000_add_user_model.py  12000_add_tenant_model.py  13000_add_pivot_tenant_to_user_model.py  14000_add_default_tenant_models_model.py  51000_add_workflow_model.py  51200_add_provider.py  51300_add_provider_model.py  51400_add_app_table.py  51500_add_app_model_config_model.py  51600_add_conversation_model.py  51700_add_message_model.py  52000_add_data_image_embedding_model.py  60000_add_mediaresource_model.py  71000_add_dataset_model.py  72000_add_document_model.py  73000_add_document_segment_model.py  f7ae132139a6_create_notes_table.py
backend/app/: __init__.py  main.py
backend/app/api/: api.py  context_manager.py
backend/app/api/app/: app_controller.py
backend/app/api/auth/: auth_controller.py
backend/app/api/brainx/: brainx_controller.py
backend/app/api/cache/: cache_controller.py
backend/app/api/chat_bot/: chat_controller.py
backend/app/api/conversation/: conversation_controller.py  message_controller.py
backend/app/api/customer/: customer_controller.py
backend/app/api/endpoints/: customer.py
backend/app/api/media_resource/: media_resource_controller.py
backend/app/api/middleware/: auth.py
backend/app/api/open_doc/: open_doc_controller.py
backend/app/api/question_answer/: query_controller.py  visual_query_controller.py  visual_search_controller.py
backend/app/api/rag/: dataset_controller.py  document_controller.py
backend/app/api/revenue/: invoice_controller.py  revenue_controller.py
backend/app/api/search/: search_controller.py
backend/app/api/system/: status_controller.py  test_controller.py
backend/app/cache/: factory.py  interface.py
backend/app/config/: api.py  app.py  baidu.py  cache.py  celery.py  config.py  database.py  kimi.py  log.py  ollama.py  openai.py  openapi.py  qa_model.py  schedule.py  server.py  storage.py  test.py  vectore_store.py
backend/app/constant/: provider_config.py
backend/app/controller/: api.py
backend/app/core/: config.py  config_class.py  enums.py
backend/app/dao/: app.py  app_model_config.py  base.py  conversation.py  media_resource.py  message.py  model_provider.py  pivot_tenant_to_user.py  tenant.py  tenant_default_model.py  user.py
backend/app/database/: alembic_manager.py  base.py  deps.py  session.py  wait_for_db.py
backend/app/logger/: __init__.py
backend/app/models/: __init__.py  app.py  app_model_config.py  base.py  customer.py  group.py  invoice.py  model_provider.py  pivot_tenant_to_user.py  revenue.py  tenant.py  workflow.py
backend/app/openapi/: openapi.py
backend/app/schedule/: scheduler.py
backend/app/schema/: customer.py
backend/app/schemas/: app.py  auth.py  base.py  customer.py  tenant.py  user.py
backend/app/service/: base.py  brainx.py
backend/app/utils/: datetime.py  image.py  media.py  pdf.py  thread.py  url.py
backend/hooks/: hook-asyncpg.py
backend/tests/: __init__.py  conftest.py
(+687 files in other folders)
