# https://python-poetry.org/docs/basic-usage/#installing-dependencies

[tool.poetry]
name = "brainx"
version = "0.1.0"
description = ""
authors = ["Matrix-X <matrix-x@artisan-cloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
databases = {extras = ["postgresql"], version = "^0.9.0"}
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
greenlet = "^3.0.3"
sentry-sdk = "^1.44.1"
llama-index = "^0.10.27"
llama-index-vector-stores-postgres = "^0.1.5"
pydantic = {extras = ["email"], version = "^2.7.4"}
llama-index-llms-huggingface = "^0.1.4"
llama-index-llms-ollama = "^0.1.2"
llama-index-llms-openai = "^0.1.14"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-openai = "^0.1.7"
asyncpg = "^0.29.0"
httpx = {extras = ["socks"], version = "^0.27.0"}
tensorboard = "^2.16.2"
pyinstaller = {version = "^6.6.0", python = ">=3.12,<3.13"}
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
langchain-community = "^0.0.38"
redis = "^5.0.4"
minio = "^7.2.7"
pip = "^24.0"
python-multipart = "^0.0.9"
pymupdf = "^1.24.3"
nltk = "^3.8.1"
qianfan = "^0.3.12"
boto3 = "^1.34.127"
azure-storage-blob = "^12.20.0"
google-cloud-storage = "^2.17.0"
oss2 = "^2.18.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
